[Yashpal] Updated form's UI

--- a/widgets/smsmagicwidget/app/css/sendsms.css
+++ b/widgets/smsmagicwidget/app/css/sendsms.css
@@ -1,471 +1,35 @@
-#emailer {
-    position: fixed;
+/* Start by setting display:none to make this hidden.
+   Then we position it in relation to the viewport window
+   with position:fixed. Width, height, top and left speak
+   for themselves. Background we set to 80% white with
+   our animation centered, and no-repeating */
+   .modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+                url('http://i.stack.imgur.com/FhHRx.gif') 
+                50% 50% 
+                no-repeat;
 }
 
-.btn {
-    padding: 2px 0px 1px 0px;
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+body.loading .modal {
+    overflow: hidden;   
 }
 
-.btnn {
-    background: white;
-    border: none;
-    margin-bottom: 5px;
-}
-
-.btnn:hover {
-    background-color: #d8dee2;
-}
-
-.editButtons {
-    padding: 4px;
-    width: 80%;
-    float: left;
-    margin-left: 20px;
-    border-color: #c3c6ca;
-    min-height: 36px;
-    max-height: 36px;
-    min-width: 515px;
-    background-color: #f7f8f9;
-}
-
-.error-message {
-    color: #cc0033;
-    display: inline-block;
-    font-size: 16px;
-    line-height: 18px;
-    margin: 5px 0 0;
-}
-
-.api {
-    width: 300px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-}
-
-#linkForm {
-    display: none;
-}
-
-.editIcon {
-    float: left;
-    padding-left: 10px;
-    cursor: pointer;
-}
-
-.editIcons {
-    display: none;
-}
-
-.edit {
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+body.loading .modal {
     display: block;
-    cursor: pointer;
 }
 
-.footer {
-    width: 615px;
-    clear: both;
-    margin-top: 5px;
-}
-
-div.editable {
-    width: 615px;
-    height: 300px;
-    border-style: solid;
-    border-width: 1px 1px 1px 1px;
-    border-color: #ccc;
-    padding: 5px;
-    overflow: auto;
-    /*white-space: pre;*/
-    font-weight: 400;
-    float: left;
-    margin: 0px;
-}
-
-div.subject {
-    width: 615px;
-    height: 36px;
-    border-style: solid;
-    border-width: 0px 0px 1px 0px;
-    border-color: #ccc;
-    padding: 5px;
-    overflow: auto;
-    white-space: pre;
-    font-weight: 400;
-    float: left;
-    margin: 0px;
-}
-
-.saveButtons {
-    height: 300px;
-    float: left;
-    padding: 30px;
-}
-
-strong {
-    font-weight: bold;
-}
-
-.goog-te-banner-frame.skiptranslate {
-    display: none !important;
-}
-
-body {
-    top: 0px !important;
-}
-
-@font-face {
-    font-family: 'zb-fonticons';
-    src: url('/fonts-icon/zb-fonticons.eot?9bjl2c');
-    src: url('/fonts-icon/zb-fonticons.eot?9bjl2c#iefix') format('embedded-opentype'),
-        url('/fonts-icon/zb-fonticons.ttf?9bjl2c') format('truetype'),
-        url('/fonts-icon/zb-fonticons.woff?9bjl2c') format('woff'),
-        url('/fonts-icon/zb-fonticons.svg?9bjl2c#zb-fonticons') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-#loader {
-    margin-top: 220px;
-    margin-left: 324px;
-    margin-right: 320px;
-    margin-bottom: 220px;
-    border: 5px solid #f3f3f3;
-    -webkit-animation: spin 1s linear infinite;
-    animation: spin 1s linear infinite;
-    border-top: 5px solid #555;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-}
-
-@-webkit-keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-    }
-
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-.check {
-    border: 0.5px solid grey;
-    cursor: pointer;
-    float: left;
-    width: 50px;
-    height: 30px;
-    padding-left: 10px;
-    background-color: white;
-}
-
-.button {
-    background-color: #f7f8f9;
-    border: none;
-    width: 33px;
-    padding-top: 3px;
-    max-height: 33px;
-}
-
-.dropdown-item {
-    padding: 5px 5px 5px 13px;
-}
-
-/* The actual popup */
-.popup {
-    display: none;
-}
-
-.mappingDiv {
-    float: left;
-    clear: both;
-    height: 700px;
-    margin: 40px;
-
-}
-
-#contentDiv {
-    /*display: none;*/
-}
-
-.calendar {
-    float: left;
-    width: 40%;
-    text-align: left;
-    max-width: 250px;
-    overflow: auto;
-}
-
-.arrow {
-    float: left;
-    width: 20%;
-    text-align: left;
-    padding-left: 10px;
-}
-
-.map {
-    width: 100%;
-}
-
-.opaque {
-    opacity: 0.3;
-    filter: Alpha(opacity=50);
-    /* IE8 and earlier */
-    pointer-events: none;
-}
-
-.send {
-    padding: 6px 15px;
-    float: left;
-    color: #fff;
-    font-size: 15px;
-    font-weight: bold;
-    text-align: center;
-    border: none;
-    background-color: #42a2eb !important;
-    border: solid 1px #42a2eb !important;
-    border-radius: 2px;
-    color: white;
-    cursor: pointer;
-}
-
-.choosemodules {
-    float: left;
-    width: 100px;
-    font-size: 16px;
-    background-color: #fff;
-    border: 1px solid grey;
-}
-
-.choose {
-    float: left;
-    width: 155px;
-    font-size: 16px;
-    background-color: #fff;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.ellipses {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.arrowIcon {
-    display: inline-block;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-bottom: 0;
-    border-left: .3em solid transparent;
-    background-color: #fff;
-}
-
-.template {
-    float: left;
-    margin-left: 20px;
-}
-
-.templateItem {
-    padding: 5px;
-    cursor: pointer;
-}
-
-.templateItem:hover {
-    background-color: #d8dee2;
-}
-
-.overlay {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-}
-
-.text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 17px;
-    color: white;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-.api-key-highlight {
-    border: 2px solid white;
-    padding: 2px 10px;
-    border-radius: 5px;
-    color: white;
-    margin: 0px 5px;
-    font-size: 14px;
-    background-color: green;
-}
-
-.save {
-    padding: 10px 15px;
-    box-sizing: border-box;
-    float: left;
-    width: 20%;
-    cursor: pointer;
-    color: #fff;
-    background: #8e8d8d;
-}
-
-.insert {
-    clear: both;
-    max-width: 615px;
-}
-
-.schedule {
-    font-family: 'ProximaNovaRegular';
-    font-size: 15px;
-    font-weight: 300;
-    padding: 8px 0px 8px 0px;
-    float: left;
-}
-
-.scheduleCheck {
-    padding: 4px 0px 10px 22px;
-    float: left;
-    min-width: 50px;
-
-}
-
-.datetimeText {
-    color: blue;
-    cursor: pointer;
-}
-
-.dropdown-menu {
-    max-height: 300px;
-    max-width: 160px;
-    overflow: auto;
-}
-
-#dateTime {
-    display: none;
-}
-
-.dateTime {
-    padding: 5px;
-    background: white;
-    float: left;
-    min-width: 480px;
-    min-height: 40px;
-    position: absolute;
-    top: 83% !important;
-    left: 23%;
-    font-size: 17px;
-    color: white;
-}
-
-.scheduleIcon {
-    float: left;
-    padding: 5px;
-    color: black;
-    background-color: grey;
-}
-
-#datepicker {
-    max-width: 110px;
-    max-height: 36px;
-    float: left;
-    padding: 5px;
-    padding-left: 10px;
-    cursor: pointer;
-    margin-left: 5px;
-}
-
-.timings {
-    float: left;
-    background: white;
-    min-height: 36px;
-    cursor: pointer;
-
-}
-
-.scheduleClose {
-    margin-left: 10px;
-    float: left;
-    min-height: 36px;
-}
-
-.cancel {
-    padding: 6px 15px;
-    float: left;
-    font-size: 15px;
-    text-align: center;
-    border-radius: 2px;
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    border: solid 1px #c4c4c4;
-}
-
-.singleLine {
-    padding-top: 13px;
-    padding-bottom: 13px;
-    clear: both;
-    margin-left: 40px;
-}
-
-.textLable {
-    float: left;
-}
-
-#templateName {
-    float: left;
-    margin-left: 20px;
-    width: 280px;
-}
-
-.dropdown .tooltiptext {
-    visibility: hidden;
-    width: 155px;
-    font-weight: 100;
-    font-size: 15px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
-}
-
-.dropdown:hover .tooltiptext {
-    visibility: visible;
-}
-
-.insertdropdown {
-    max-width: 300px;
-    min-width: 300px;
-}
-
-.template {
-    float: left;
-    margin-left: 20px;
+.btn:focus, textarea {
+    outline: none !important;
+    box-shadow:none !important;
 }
