--- a/widgets/YAMessenger/app/css/sendsms.css
+++ b/widgets/YAMessenger/app/css/sendsms.css
@@ -41,8 +41,13 @@ textarea,
 
 body {
     max-height: 534px;
+    font-family: "ProximaNovaRegular", sans-serif;
+    color: #111;
+    background-color: #fff;
+    margin: 0 auto;
+    padding: 0;
+    text-rendering: optimizeLegibility;
 }
-
 
 .primarybtn:focus {
     background-color: #3c98dd !important;
@@ -57,7 +62,9 @@ body {
     box-shadow: none !important;
 }
 
-
+.ya-color {
+    color: #666!important;
+}
 .chat {
     margin-top: 5px;
     border-radius: 5px;
@@ -78,3 +85,75 @@ body {
     border-color: transparent #ffffff transparent transparent;
 }
 
+.select2-container--default  {
+    color: #303030!important;
+    font-size: .929rem!important;
+    outline: none !important;
+    box-shadow: none !important;
+    font-family: "ProximaNovaRegular", "Open Sans", sans-serif !important;
+}
+
+.select2-container--default .select2-selection--single {
+    background: white;
+    border:1px solid #ced4da !important;
+    border-radius: 2px;
+    height: 34px;
+    padding-right: 10px;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.select2-container--default .select2-selection--multiple {
+    background: white;
+    border:1px solid #ced4da !important;
+    border-radius: 2px;
+    min-height: 34px;
+    padding-right: 10px;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 34px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    width: 18px;
+    line-height: 34px;
+}
+
+.select2-search--dropdown {
+    color: #303030!important;
+    font-family: "ProximaNovaRegular", "Open Sans", sans-serif !important;
+    height: 34px;
+    padding: 0px !important;
+    border: 0px !important;
+    border-bottom: 1px solid #03A9F4 !important;
+    margin: 0px 1px 0px 1px;
+}
+.select2-search__field {
+    color: #303030!important;
+    font-family: "ProximaNovaRegular", "Open Sans", sans-serif !important;
+    outline: none !important;
+    box-shadow: none !important;
+    border: 0px !important;
+    background: #fff url(../images/select2.png) no-repeat 100% -22px;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected]{
+    color: #303030!important;
+    background-color: #f5f5f5 !important;
+}
+
+.select2-dropdown {
+    z-index: 9001 !important;
+}
+
+.select2-results__options {
+    margin: 1px !important;
+}
+
+.spinner-grow {
+    -webkit-animation: spinner-grow 1.5s linear infinite !important;
+    animation: spinner-grow 1.5s linear infinite !important;
+}
