--- a/widgets/YAMessenger/app/css/sendsms.css
+++ b/widgets/YAMessenger/app/css/sendsms.css
@@ -9,9 +9,11 @@
     z-index: 1000;
     top: 0;
     left: 0;
+    padding-left: 42%;
+    padding-top: 42%;
     height: 100%;
     width: 100%;
-    background: rgba(255, 255, 255, .8) url('http://i.stack.imgur.com/FhHRx.gif') 50% 50% no-repeat;
+    background: rgba(255, 255, 255, .6);
 }
 
 /* When the body has the loading class, we turn
@@ -42,7 +44,7 @@ textarea,
 }
 
 body {
-    max-height: 534px;
+    /* max-height: 534px; */
     font-family: "ProximaNovaRegular", sans-serif;
     color: #111;
     background-color: #fff;
@@ -165,7 +167,7 @@ body {
 }
 
 #settings {
-    padding: 4px 24px 0px 0px;
+    padding: 4px 0px 0px 0px;
     color: #666;
     cursor: pointer;
 }
