--- a/widgets/biginnew/SMSMagicForBigin/app/css/style.css
+++ b/widgets/biginnew/SMSMagicForBigin/app/css/style.css
@@ -35,3 +35,23 @@ input:focus {
     cursor: pointer;
     text-decoration: underline;
 }
+
+#overlay {
+    position: absolute; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.0); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
+
+  #text{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+  }
